Fixed horizontal scroll on mobile (100% width with padding elements).

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,10 +28,7 @@ h4 {
   font-family: 'Arvo', serif;
 }
 
-.caption {
-  color: #FF8945;
-  padding-bottom: 5px;
-}
+/* Overlay Styling */
 
 .tech-icon {
   color: #fff;
@@ -130,11 +127,6 @@ a.img__description:hover {
 
 /* Nav Link */
 
-button {
-  background-color: transparent;
-  border: none;
-}
-
 .nav-link {
   color: rgb(255, 255, 255);
   font-size: 20px;
@@ -153,6 +145,21 @@ button {
 
 /* General Stylings */
 
+
+.about-item.title{
+  color: #FF8945;
+  font-size: 2.5vmin;
+}
+
+.about-item.subtitle{
+  font-size: 1rem;
+}
+
+.caption {
+  color: #FF8945;
+  padding-bottom: 5px;
+}
+
 .full-height {
   min-height: 100vh;
 }
@@ -166,7 +173,7 @@ button {
 
 .section {
   padding: 0px 50px;
-  max-width: 100%;
+  max-width: 95%;
 }
 
 .section-item {
@@ -178,22 +185,14 @@ button {
   font-weight: 700;
 }
 
-.title {
-  font-size: 3vmin;
-}
-
 .subtitle {
   font-size: 2vmin;
 }
 
-.about-item.title{
-  color: #FF8945;
-  font-size: 2.5vmin;
+.title {
+  font-size: 3vmin;
 }
 
-.about-item.subtitle{
-  font-size: 1rem;
-}
 
 /* Standard */
 
