--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ html {
 
 body {
   margin: 0;
-  background-color: #1e1e1e;
+  background-color: #19191A;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
